KSENROLL-3408 Cleared up warnings, fixed bugs identified by findbugs. Removed dead code.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@38659 0ac02d80-fb3f-11dc-a574-c57244a850eb